Include sqkdata, 2ch_example/ and logs

--- a/.gitignore
+++ b/.gitignore
@@ -37,12 +37,10 @@ nosetests.xml
 .ropeproject/
 PySynth-1.0.1/
 Research/
-examples/
+examples/*
 !examples/sqkdata
 !examples/2ch_example/*.[WAV]
 !examples/2ch_example/*.LOG
-!examples/2ch_example2/*.[WAV]
-!examples/2ch_example2/*.LOG
 !examples/logs/playback.log
 !examples/logs/reclog.LOG
 
